[package]
name = "r8s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
# https://kube.rs/kubernetes-version/
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_20"] }
# https://kube.rs/kubernetes-version/
kube = { version = "0.74.0", default-features = true, features = [ "derive", "runtime", "rustls-tls" ] }
tokio = { version = "1.23", features = ["full"] }
